frontend/web/css/material.css
html,
body {
    background: #222222;
    height: 100%;
}

.wrap {
    min-height: 100%;
    height: auto;
    margin: 0 auto -60px;
    padding: 0 0 60px;
}

.wrap > .container {
    padding: 70px 15px 20px;
}


.jumbotron {
    text-align: center;
    background-color: transparent;
}

.jumbotron .btn {
    font-size: 21px;
    padding: 14px 24px;
}

.not-set {
    color: #c55;
    font-style: italic;
}

/* add sorting icons to gridview sort links */
a.asc:after, a.desc:after {
    position: relative;
    top: 1px;
    display: inline-block;
    font-family: 'Font Awesome 5 Free';
    font-weight: 100;
    font-style: normal;
    font-weight: normal;
    line-height: 1;
    padding-left: 5px;
}

a.asc:after {
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  content: "\f15d";
}

a.desc:after {
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  content: "\f881";
}

.sort-numerical a.asc:after {
    content: "\e153";
}

.sort-numerical a.desc:after {
    content: "\e154";
}

.sort-ordinal a.asc:after {
    content: "\e155";
}

.sort-ordinal a.desc:after {
    content: "\e156";
}

.grid-view th {
    white-space: nowrap;
}

.hint-block {
    display: block;
    margin-top: 5px;
    color: #999;
}

.error-summary {
    color: #a94442;
    background: #fdf7f7;
    border-left: 3px solid #eed3d7;
    padding: 10px 20px;
    margin: 0 0 15px 0;
}

/* align the logout "link" (button in form) of the navbar */
.nav li > form > button.logout {
    padding: 15px;
    border: none;
}

@media(max-width:767px) {
    .nav li > form > button.logout {
        display:block;
        text-align: left;
        width: 100%;
        padding: 10px 15px;
    }
}

.nav > li > form > button.logout:focus,
.nav > li > form > button.logout:hover {
    text-decoration: none;
}

.nav > li > form > button.logout:focus {
    outline: none;
}
/* Add seperator class for plain text (used in Login or Register menu link) */
.navbar-nav > li > .sep {
  color: #9d9d9d;
  padding-top: 15px;￼
  position: relative;
  display: block;
  padding: 10px 15px;
}

/* Fix details to our liking */
details summary {
  margin-bottom: 0.5em;
  color:#94c11f;
}
details summary:hover {
  cursor: pointer;
  text-decoration: underline #688816;
  color:#688816;
  background-color:transparent;
}

details summary>b:hover {
  cursor: pointer;
  text-decoration: underline #688816;
  color:#688816;
  background-color:transparent;
}

/* target detail views specific */
#target-fulldetails th {
  width: 160px;
  text-align: right;
}
.sidebar .nav p {
  color: white;
}
.pagination i.fa,
.pagination i.fas,
.pagination i.fab
{
  font-size: 0.7em;
  vertical-align: middle;
  font-weight: 900;
}
.pagination .page-item {
  font-size: large;
  line-height: 1.2em;
}
.watermarked {
  height: 105px;
  /*width: 1200px;*/
  background-image: url(/images/targetbg.png);
  background-size: 30rem;
  background-position: 100% 0;
  background-repeat: no-repeat;
  position: relative;
  display: flex;
  align-items: center;
}
.watermarked img {
/* the actual 'watermark' */
  position: absolute;
  bottom: 0.5rem;
  width: 3.5rem;
  right: 3rem;
}
.bg-gradual-progress {
  background: rgb(2,0,36);
  background: linear-gradient(60deg, #688816, #94c11f);
}
.TweetThis {
  display: none;
}
.leader .TweetThis {
  display: none;
}
.leader:hover a.TweetThis {
  display: inline;
}
.leader:hover a.TweetThis>img {
  opacity: 0.7;
  filter: alpha(opacity=70); /* For IE8 and earlier */
}

.challenge-view:hover h2 a.TweetThis {
  display: inline;
}
#target-list th>a {
  color: #587a01;
}
#target-list tr:hover a.TweetThis {
  font-size: 1.5em;
  display: inline;
}
.list-view .challenge-view:hover h3 a.TweetThis,
.challenge-view div.well:hover h2 a.TweetThis,
summary:hover a.TweetThis
{
  display: inline;
}

.headshots code {
  font-size: 0.9em;
}

.changelog-index .body-content
.changelog-index .body-content h1,
.changelog-index .body-content h2,
.changelog-index .body-content h3,
.changelog-index .body-content h4,
.changelog-index .body-content ul
{
  font-family: 'Roboto Mono';
}

.grid-view th,
td.td-actions,
.card .table tr:first-child td
{
    white-space: nowrap;
}

.control-label { color: #94c11f; }

.help-block-error  { color: #a94442; }



#target-list td,
#stream-listing .leader-name
{
  font-family: 'Roboto Mono';
  font-size: 1em;
  letter-spacing: 0em;
}
#target-list td
{
  white-space: nowrap;
}

.pull-right {
    float: right;
}
.Leaderboard{
  /*padding-top: 30px;
/*  max-width: 1400px;*/
}

.LeaderHeader{
    padding: 30px 400px;
    margin: auto;
    /*max-width: 1400px;*/
    font-weight: 200;
}
.leader-wrap {
    display: flex;
    margin-top: 10px;
    margin-left: 10px;
    margin-right: 10px;
}

.leader{
    font-family: 'Roboto Mono';
    font-size: 1em;
    letter-spacing: 0em;
/*    white-space: nowrap; */
    padding: 0px 0px;
    margin-bottom: 0px;
/*    animation-name: revealLeaders;
    animation-duration: 0.4s;
    animation-fill-mode: both;
    animation-timing-function: ease-in-out; */
    width: 100%;
}

.leader-name {
    /*margin-left: 10px;*/
    /* line-height: 1;*/
    /*font-size: 1.1em;*/
}

.leader-place {
  /* font-size: 1.1em; */
}

.leader-ava {
    /*padding: 4px;*/
    margin-right: 16px;
    position: relative;
}

.leader-score {
    display: flex;
    align-items: center;
    opacity: 1;
}

.leader-score svg{
    display: block;
    margin-right: 4px;
}

.leader-score_title{
    text-align: right;
    white-space: nowrap;
    width:100%;
/*    line-height: 1;*/
}

/*.leader-ava::after{
    content: "";
    left: 0;
    bottom: 0;
    display: block;
    height: 6px;
    position: absolute;
    border: 0px transparent solid;
    border-left-width: 20px;
    border-right-width: 20px;
    border-bottom-width: 6px;
    border-bottom-color: #fff;
    transition: border-bottom-color .2s ease-in-out;
}
*/
.leader-bar {
    margin-top: 8px;
    margin-left: 30px;
    animation-name: barLoad;
    animation-duration: .4s;
    animation-fill-mode: both;
    animation-timing-function: cubic-bezier(0.6, 0.2, 0.1, 1);
    transform-origin: left;
}

.bar {
    height: 4px;
    border-radius: 2px;
    width: 100%;
    background-color: #94c11f;
}

.border {
    height: 1px;
    width: 100%;
    background-color: #aaaaaa;
    padding: 0px 0px;
    margin-bottom: 0px;
    margin-left: 0px;
}


@keyframes revealLeaders{
    from{
        transform: scale(1.5,1.0) translateX(-100px);
        opacity: 0.8;
    }
    to{
        transform: none;
        opacity: 1;
    }
}

@keyframes barLoad{
    from{
        transform: scaleX(0);
    }
    to{
        transform: scaleX(1)
    }
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
    border-bottom: 1px solid #94c11f;
    -webkit-text-fill-color: lightgray;
    transition: background-color 5000s ease-in-out 0s;
    -webkit-box-shadow: 0 0 0 30px #222 inset !important;
}

.has-success [class*=' bmd-label'], .has-success [class^=bmd-label] {
    color: #688816;
}

.sidebar[data-background-color=black] .nav .nav-item.active i,
.sidebar[data-background-color=black] .nav .nav-item.active p
 {
    color: #333;
}
.flag-claim {
  color: #e10f00;
}

.card .card-body+.card-footer .stats, .card .card-footer .stats,
.card-stats {
  color: #333;
}

.card-stats .card-header .card-category:not([class*=text-]) {
    color: #333;
}

.target-card > div > div.card-header.card-header-icon.card-header-warning > h4 {
  color: black;
  font-weight: 500;
  background-color: #94c11f!important;
  padding-right: 0.1em;
  border-radius: 4px;
}


details.headshotters summary::after {
  content: attr(data-open);
  opacity: 0;
  font-size: 5px;
}

details.headshotters[open] summary::after {
  content: attr(data-open);
  opacity: 1;
  font-size: 14px;
}

details.headshotters:not([open]) summary::after {
  content: attr(data-close);
  opacity: 1;
  font-size: 14px;
}

.iconic-card{
  border-radius: 4px;
  background: #fff;
  color: darkgray;
  box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
  transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
  padding: 1vw 1vw 1.5vw 1vw;
  height: 90%;
}

.iconic-card h3{
  font-size: 1.2em;
  font-weight: 600;
  color: #222222;
}

.iconic-card img{
  max-height: 80%;
  max-width: 20%;
}

@media(max-width: 990px){
  .iconic-card{
    margin: 20px;
  }
}


.text-youtube {
  color: #FF0000;
}
.text-github {
  color: #333;
}

.text-twitch {
  color: #6441A4;
}
.text-twitter {
  color: #1DA1F2;
}

.text-discord {
  color:#7289DA!important;
}
details > .markdown h1 {
 font-size: 1.65em;
}

details > .markdown h2 {
 font-size: 1.60em;
}
details > .markdown h3 {
  font-size: 1.55em;
}

details > .markdown h4 {
  font-size: 1.50em;
}

details > .markdown h5 {
  font-size: 1.45em;
}

details > .markdown h6 {
  font-size: 1.40em;
}

.markdown pre {
  padding: .2rem .4rem;
  color: #212529;
  background-color: #212529;
  border-radius: .2rem;
  background-color: #212529;
  overflow-x:auto;
  max-width: 720px;
}

.markdown code {
  padding: .2rem .4rem;
  font-size: 87.5%;
  color: #fff;
  background-color: #212529;
  border-radius: .2rem;
  max-width: 80%;
  overflow-x:auto;
}
.markdown img {
  max-width: 80%;
}
#notificationsMenu>a, #hintsMenu>a {
    word-wrap: break-word;
    white-space: normal;
}

.footer {
    height: 50px;
    padding: 0;
    padding-top: 10px;
    padding-bottom: 0;
}
.footer .copyright {
  padding: 0 0;
}

.footer ul li a {
  padding-top: 0;
  padding-bottom: 0;
}

.ct-chart {
  min-height: 200px;
  min-width: 200px;
}
.ct-chart .ct-label {
  color: white;
}
.ct-legend {
    position: relative;
    z-index: 10;
    list-style: none;
    text-align: center;
}
.ct-legend li {
    position: relative;
    margin-top: 20px;
    padding-left: 23px;
    margin-right: 10px;
    margin-bottom: 3px;
    cursor: pointer;
    display: inline-block;
}
.ct-legend li:before {
    width: 12px;
    height: 12px;
    position: absolute;
    left: 0;
    content: '';
    border: 3px solid transparent;
    border-radius: 2px;
}
.ct-legend li.inactive:before {
    background: transparent;
}
.ct-legend.ct-legend-inside {
    position: absolute;
    top: 0;
    right: 0;
}
.ct-legend.ct-legend-inside li{
    display: block;
    margin: 0;
}
.ct-legend .ct-series-0:before {
    background-color: #f44336;
    border-color: #f44336;
}
.ct-legend .ct-series-1:before {
    background-color: #00bcd4;
    border-color: #00bcd4;
}
.ct-legend .ct-series-2:before {
    background-color: #f4c63d;
    border-color: #f4c63d;
}
.ct-legend .ct-series-3:before {
    background-color: #d17905;
    border-color: #d17905;
}
.ct-legend .ct-series-4:before {
    background-color: #453d3f;
    border-color: #453d3f;
}

.ct-chart-line-multipleseries .ct-legend .ct-series-0:before {
    background-color: #d70206;
    border-color: #d70206;
}

.ct-chart-line-multipleseries .ct-legend .ct-series-1:before {
    background-color: #f4c63d;
    border-color: #f4c63d;
}

.ct-chart-line-multipleseries .ct-legend li.inactive:before {
    background: transparent;
}

.ct-chart .ct-grid {
  stroke: white;
}

.clock {
    font-size: 0.7em;
    font-family: Orbitron;
}

.blink_me {
  animation: blinker 0.5s linear infinite;
}

@keyframes blinker {
  50% {
    opacity: 0;
  }
}

.rankpos-1 {
  border: 2px solid #FFD700;
}
.rankpos-2 {
  border: 2px solid #C0C0C0;
}
.rankpos-3 {
  border: 2px solid #CD7F32;
}


.has-error>input, .has-error>label  {
  color: red;
  font-weight: bold;
}
.text-bold {
  font-weight: bold;
}

.form-control {
  color: lightgray;
}

